# Exalith

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  arch.md  components.json  docker-compose.yml  fix-deps.mjs  mcp-config.example.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
agent/: .dockerignore  .gitignore  Dockerfile  langgraph.json  pyproject.toml
agent/sample_agent/: __init__.py  agent.py  checkpointer.py  config.py  create_classify.py  create_expert_agent.py  create_plan_and_execute_agent.py  create_planner_agent.py  errors.py  llms.py  model_factory.py  prompts.py  state.py  supervisor.py  swarm.py  utils.py
agent/sample_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agent/sample_agent/expert/: __init__.py  create_expert_agent.py  create_expert_agent_v2.py
agent/sample_agent/mcp/: config.py
agent/sample_agent/nodes/: __init__.py  all_helper.py  data_expert.py  dispatch_node.py  excel_helper.py  knowledge_helper.py
agent/sample_agent/swarm/: __init__.py  create_swarm.py  handoff.py
app/: DefaultInstructions.tsx  globals.css  layout.tsx  page.tsx
app/components/: ChatSection.tsx  CopilotActionHandler.tsx  CopilotInput.tsx  CopilotMermaid.tsx  CopyButton.tsx  CustomButton.tsx  GlobalDropZone.tsx  InstructionsModal.tsx  MCPConfigForm.tsx  MainSection.tsx  PromptPro.tsx  TabContext.tsx  TimeTravel.tsx  Timer.tsx  ToolCallRenderer.tsx
app/configs/: agentConfigs.ts
app/contexts/: MCPConfigContext.tsx  ServerConfig.tsx
app/fix/: copilot.ts
app/hooks/: useJSONFormatter.ts  useLocalStorage.ts  (+2 more)
(+49 files in other folders)
