[tool.poetry]
name = "sample_agent"
version = "0.1.0"
description = "Starter"
authors = ["Markus Ecker <markus.ecker@gmail.com>"]
license = "MIT"

[project]
name = "sample_agent"
version = "0.0.1"
dependencies = [
    "langchain-openai>=0.2.14",
    "langchain-anthropic>=0.3.3",
    "langchain>=0.3.1",
    "openai>=1.51.0",
    "langchain-community>=0.3.1",
    "copilotkit>=0.1.39",
    "uvicorn>=0.31.0",
    "python-dotenv>=1.0.1",
    "langchain-core>=0.3.25",
    "langgraph-cli[inmem]>=0.1.64",
    "langchain-mcp-adapters>=0.0.3",
    "fastmcp>=0.4.1",
    "langgraph>=0.3.5",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "langmem>=0.0.16",
    "langgraph-checkpoint-sqlite>=2.0.6",
    "langgraph-supervisor (>=0.0.14,<0.0.15)",
    "json-repair (>=0.40.0,<0.41.0)",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain-openai = "^0.3.10"
langchain-anthropic = "^0.3.3"
langchain = "^0.3.1"
openai = "^1.68.2"
langchain-community = "^0.3.1"
copilotkit = "^0.1.39"
uvicorn = "^0.31.0"
python-dotenv = "^1.0.1"
langchain-core = "^0.3.25"
langgraph-cli = { extras = ["inmem"], version = "^0.1.64" }
langchain-mcp-adapters = "^0.0.5"
fastmcp = "^0.4.1"
langgraph = "^0.3.5"

[tool.poetry.scripts]
dev = "sample_agent.supervisor:main"

[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple/"
priority = "primary"
